# HAD-MEEG

./: .env  .env_example  .gitignore  .pre-commit-config.yaml  .pre-commit.yml  README.html  README.md  _write_anat.py  acc.py  had-class_plot.r  main.py  pyproject.toml  requirements.txt  step-1_preprocessing.py  step-2_epoching.py  step-2a_epoching.py  step-2b_make_evokeds.py  step-2b_make_grand_evo.py  step-3a_prepshow-fline.py  step-3b_prepshow-ica.py  step-4a_basic-head.py  step-4b_basic-accuracy.py  step-5_manifold-cebra.py  step-5a_cebra-makeinput.py  step-5a_rsa-roiplot.py  step-5b_cebra-tranning.py  step-5b_cebra-viz.py  step-6a_rsa-roiplot.py  step-6b_rsa-corr.py  step-6c_rsa-plot.py  test.py
.claude/: ecc-tools.json  identity.json
.claude/commands/: project-installation-and-import-path-upgrade.md  update-shared-config-and-propagate-to-scripts.md
.claude/skills/HAD-MEEG/: SKILL.md
.codex/: AGENTS.md
misc/: _write_anat.py  orgnize_beh.py  orgnize_neu.py  test_decoding.py
resources/: fmri-rdms.npz  had-class.csv
resources/rois/: DS.dtseries.nii  EV.dtseries.nii  EV_VS_DS_LS.dlabel.nii  HCP-MMP1_visual-cortex.csv  LS.dtseries.nii  VS.dtseries.nii
resources/toy_bids/: README  participants.tsv
scripts/: __init__.py  _write_anat.py  orgnize_beh.py  orgnize_neu.py  orgnize_tri.py  plot_class_circle.r  step-1_preprocessing.py  step-2a_epoching.py  step-2b_make_evokeds.py  step-3a_prepshow-fline.py  step-3b_prepshow-ica.py  step-4a_basic-head.py  step-4b_basic-accuracy.py  step-5a_rsa-roiplot.py  step-5b_rsa-corr.py  step-5c_rsa-plot.py  test.tsv  upate_events.py
src/: __init__.py  config.py  logger.py  main.py  utils.py
src/cebra/: __init__.py  models.py  prep.py  viz.py
src/decoding/: __init__.py  plot.py  sliding.py  stat.py
src/epo/: __init__.py  epoching.py
src/evo/: __init__.py  evoked.py
src/prep/: __init__.py  _bids_loader.py  bad_chs.py  bids_loader.py  ica.py  line_noise.py  pipe.py  pipe_batch.py  pipe_single.py
src/prep/ica/: __init__.py  app.py  (+2 more)
src/rsa/: __init__.py  corr.py  pre.py
src/viz/: __init__.py  utils.py
(+30 files in other folders)
