[project]
name = "had-meeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cupy-cuda11x>=13.6.0",
    "ipywidgets>=8.1.8",
    "loguru>=0.7.3",
    "meegkit>=0.1.7",
    "mne>=1.6.1",
    "mne-bids>=0.14",
    "mne-icalabel>=0.8",
    "onnxruntime>=1.23.2",
    "optuna>=4.6.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyprep>=0.4.3",
    "seaborn>=0.13.2",
    "tqdm-joblib>=0.0.5",
]
